# tardigrade

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.agentarmor/: checkpoints.db  demo-checkpoints.db
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.tardigrade/: checkpoints.db  demo-checkpoints.db
demo/: demo_workflow.py  hero.tape
docs/: api.md
docs/examples/: circuit_breaker_model_fallback.py  multi_step_pipeline.py  retry_with_httpx.py  tardigrade-crewai-integration.md
src/agentarmor/: __init__.py  __main__.py  _checkpoint.py  _circuit_breaker.py  _context.py  _cost.py  _decorator.py  _event_bus.py  _logging.py  _serializer.py  _types.py  _workflow.py
src/agentarmor/dashboard/: __init__.py  _app.py  _widgets.py
src/tardigrade/: __init__.py  __main__.py  _checkpoint.py  _circuit_breaker.py  _context.py  _cost.py  _decorator.py  _event_bus.py  _result.py  _serializer.py  _types.py  _workflow.py
src/tardigrade/dashboard/: __init__.py  _app.py  _styles.tcss
tests/: conftest.py  test_budget_async.py  test_budget_sync.py  test_checkpoint_async.py  test_checkpoint_sync.py  test_circuit_breaker_async.py  test_circuit_breaker_sync.py  test_circuit_breaker_unit.py  test_cost_unit.py  test_dashboard_smoke.py  test_decorator_async.py  test_decorator_sync.py  test_degradation_async.py  test_degradation_sync.py  test_event_bus.py  test_retry_async.py  test_retry_sync.py  test_workflow.py  test_workflow_result.py
