[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentarmor"
version = "0.1.0"
description = "Resilience middleware that makes AI agents self-healing — retries, checkpointing, circuit breakers, cost budgets, and graceful degradation for any agent framework."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Cole Godfrey", email = "colegodfrey34@gmail.com" },
]
keywords = [
    "ai",
    "agents",
    "resilience",
    "llm",
    "middleware",
    "circuit-breaker",
    "retry",
    "checkpoint",
    "mcp",
    "langchain",
    "crewai",
    "openai",
    "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dashboard = [
    "textual>=1.0.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/cole-godfrey/agentarmor"
Documentation = "https://github.com/cole-godfrey/agentarmor/tree/main/docs"
Repository = "https://github.com/cole-godfrey/agentarmor"
Changelog = "https://github.com/cole-godfrey/agentarmor/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/cole-godfrey/agentarmor/issues"

[project.scripts]
agentarmor = "agentarmor.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentarmor"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["agentarmor"]
